--- a/Assessment_Backend/appsettings.Development.json
+++ b/Assessment_Backend/appsettings.Development.json
@@ -13,6 +13,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "AssessmentConnection": "Data Source=localhost\\MSSQLSERVER01;Initial Catalog=AssessmentDb;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "AssessmentConnection": "Data Source=REZAK\\SER2H22;Initial Catalog=AssessmentDb;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
