--- a/Assessment_Backend/appsettings.Development.json
+++ b/Assessment_Backend/appsettings.Development.json
@@ -12,7 +12,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "AssessmentConnection": "Data Source=a9e9fba1-90fa-4355-b733-e3f2ee3bc7a2.hsvc.ir,31851;Initial Catalog=Assessmentdb;User Id=sa;password=fd9MqFDihEil3qQbZWDPiVrV5TzZERHB;Trusted_Connection=False;MultipleActiveResultSets=true;TrustServerCertificate=True;"
 
-    "AssessmentConnection": "Data Source=REZAK\\SER2H22;Initial Catalog=AssessmentDb;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    //  "AssessmentConnection": "Data Source=REZAK\\SER2H22;Initial Catalog=AssessmentDb;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
